2000-08-03  Tristan Tarrant  <tarrant_tristan@emc.com>

	* bggame.cc, sigame.cc: Implement main menu (SI's is incomplete)
	* gamewin.cc: move creation of 'gamedat' to separate function to 
	be invoked by main menu

2000-08-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Dead bodies decay after several game-clock hours.

2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>

	* game.h, gamewin.cc: if in BG we show ENDSHAPE.FLX, if in SI we show 
	PAPERDOL.VGA
	* exult.cc: Default resolution is 320x200 with 2x filter. This is to 
	be as close as possible to the original.

2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.*, exult.cc, usecode.cc: decided to not store the Game 
	object inside gamewin, but use the static get_game of the Game 
	class instead. "There can be only one" (TM)

2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>

	* game.*, bggame.cc, sigame.cc: implemented shape lists. SI now has
	placeholder intro/endgame sequences (it plays the proper FLIcs, but
	nothing else really).
	* gumps.*: use shape lists instead of hardcoded constants. Most
	gumps now work properly under BG and SI. Paperdolling will be
	hard...

2000-07-31  Tristan Tarrant  <tarrant_tristan@emc.com>

	* game.*, bggame.cc, sigame.cc: separated game-dependent stuff into
	separate files with an abstract Game class.
	* exult.cc, gamewin.*, usecode.cc: modified to take the above into
	account
	* files/Flat.*: added a new filetype, which is for simple files 
	(e.g. The palettes in Serpent Isle)

2000-07-31  Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc, gamewin.*, imagewin.*: support resolution switching
	with ALT-PLUS and ALT-MINUS. Also show messages when certain 'cheat'
	keys are pressed.
	* Makefile.am: make sure DEBUG_FLAGS is used at link.

2000-07-30  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Monsters attack automatically; midi's played.
	* actors.cc, gamewin.{cc,h}:  Show poisoned auras.

2000-07-29  Jeff Freedman  <jeff@amy.nerble.net>
